--- a/app/src/main/res/layout/item_home_list.xml
+++ b/app/src/main/res/layout/item_home_list.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="postList"
-            type="com.hoon.tourinkorea.data.post.Post" />
+            type="com.hoon.tourinkorea.data.model.Post" />
     </data>
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
