fix: 패키지 변경

--- a/app/src/main/res/navigation/home_graph.xml
+++ b/app/src/main/res/navigation/home_graph.xml
@@ -27,7 +27,7 @@
         tools:layout="@layout/activity_detail">
         <argument
             android:name="post"
-            app:argType="com.hoon.tourinkorea.data.post.Post" />
+            app:argType="com.hoon.tourinkorea.data.model.Post" />
     </activity>
 
     <action
