--- a/app/src/main/res/drawable/ic_bookmark_border.xml
+++ b/app/src/main/res/drawable/ic_bookmark_border.xml
@@ -7,7 +7,7 @@
     <clip-path
         android:pathData="M0,0h32v32h-32z"/>
     <path
-        android:pathData="M22.667,4H9.333C7.867,4 6.68,5.2 6.68,6.667L6.667,28L16,24L25.333,28V6.667C25.333,5.2 24.133,4 22.667,4Z"
+        android:pathData="M22.667,4H9.333C7.867,4 6.667,5.2 6.667,6.667V28L16,24L25.333,28V6.667C25.333,5.2 24.133,4 22.667,4ZM22.667,24L16,21.093L9.333,24V6.667H22.667V24Z"
         android:fillColor="#000000"/>
   </group>
 </vector>
