--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/bn_bookmarks"
         android:enabled="true"
-        android:icon="@drawable/ic_bookmark"
+        android:icon="@drawable/ic_bookmarks"
         android:title="@string/bookmarks" />
     <item
         android:id="@+id/bn_home"
