--- a/app/src/main/res/navigation/home_graph.xml
+++ b/app/src/main/res/navigation/home_graph.xml
@@ -21,7 +21,7 @@
         android:label="bookmarks"
         tools:layout="@layout/fragment_bookmark" />
     <activity
-        android:id="@+id/detailActivity"
+        android:id="@+id/dest_detail"
         android:name="com.hoon.tourinkorea.ui.detail.DetailActivity"
         android:label="activity_detail"
         tools:layout="@layout/activity_detail">
@@ -32,6 +32,6 @@
 
     <action
         android:id="@+id/action_global_detail"
-        app:destination="@+id/detailActivity" />
+        app:destination="@+id/dest_detail" />
 
 </navigation>
