--- a/app/src/main/res/layout/item_bookmark_list.xml
+++ b/app/src/main/res/layout/item_bookmark_list.xml
@@ -22,8 +22,8 @@
 
     <TextView
         android:id="@+id/tv_bookmark_local"
-        android:layout_width="58dp"
-        android:layout_height="17dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="12dp"
         android:textSize="15sp"
@@ -40,13 +40,12 @@
         app:layout_constraintStart_toStartOf="@+id/iv_bookmark_photo"
         app:layout_constraintTop_toBottomOf="@+id/tv_bookmark_local" />
 
-    <View
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:layout_marginTop="12dp"
-        android:background="#DFDFDF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_bookmark_title" />
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:background="@color/underline"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
