--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="purple40">#E8DEF8</color>
     <color name="gray">#D9D9D9</color>
     <color name="underline">#DFDFDF</color>
+    <color name="purple100">#673AB7</color>
 </resources>
