--- a/app/src/main/res/layout/item_bookmark_list.xml
+++ b/app/src/main/res/layout/item_bookmark_list.xml
@@ -1,44 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/iv_bookmark_photo"
-        android:layout_width="0dp"
-        android:layout_height="200dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:importantForAccessibility="no"
-        android:scaleType="centerCrop"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="ImageContrastCheck"
-        tools:srcCompat="@tools:sample/avatars" />
+    <data>
+        <variable
+            name="clickListener"
+            type="com.hoon.tourinkorea.ui.ItemClickListener" />
 
-    <TextView
-        android:id="@+id/tv_bookmark_local"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="12dp"
-        android:textSize="15sp"
-        app:layout_constraintStart_toStartOf="@+id/iv_bookmark_photo"
-        app:layout_constraintTop_toBottomOf="@+id/iv_bookmark_photo" />
+        <variable
+            name="post"
+            type="com.hoon.tourinkorea.data.model.Post" />
+    </data>
 
-    <TextView
-        android:id="@+id/tv_bookmark_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="12dp"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/iv_bookmark_photo"
-        app:layout_constraintTop_toBottomOf="@+id/tv_bookmark_local" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:onClick="@{() -> clickListener.onItemClick(post)">
+
+        <ImageView
+            android:id="@+id/iv_bookmark_photo"
+            imageUrl="@{post.storageUriList[0]}"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:importantForAccessibility="no"
+            android:scaleType="centerCrop"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ImageContrastCheck"
+            tools:srcCompat="@tools:sample/avatars" />
+
+        <TextView
+            android:id="@+id/tv_bookmark_local"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="12dp"
+            android:text="@{post.location}"
+            android:textSize="15sp"
+            app:layout_constraintStart_toStartOf="@+id/iv_bookmark_photo"
+            app:layout_constraintTop_toBottomOf="@+id/iv_bookmark_photo" />
+
+        <TextView
+            android:id="@+id/tv_bookmark_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="12dp"
+            android:text="@{post.title}"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="@+id/iv_bookmark_photo"
+            app:layout_constraintTop_toBottomOf="@+id/tv_bookmark_local" />
 
         <View
             android:layout_width="0dp"
@@ -49,3 +65,4 @@
             app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
