--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,18 +26,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/purple20"
-                app:navigationIcon="@drawable/ic_bx_menu"
+
                 app:title="Tour"
                 app:titleCentered="true">
+<!--                app:navigationIcon="@drawable/ic_bx_menu"-->
 
-                <ImageView
-                    android:id="@+id/iv_my_page"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:layout_marginEnd="8dp"
-                    android:importantForAccessibility="no"
-                    android:src="@drawable/ic_my_page" />
+<!--                <ImageView-->
+<!--                    android:id="@+id/iv_my_page"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_gravity="end"-->
+<!--                    android:layout_marginEnd="8dp"-->
+<!--                    android:importantForAccessibility="no"-->
+<!--                    android:src="@drawable/ic_my_page" />-->
 
             </com.google.android.material.appbar.MaterialToolbar>
 
